Beautiful new habbit card

--- a/frontend/src/i18n/locales/en.json
+++ b/frontend/src/i18n/locales/en.json
@@ -1,6 +1,6 @@
 {
   "habits": {
-    "title": "Habits",
+    "title": "Habits title",
     "add": "Add habit",
     "delete": "Delete",
     "edit": "Edit",
