--- a/frontend/src/i18n/locales/ru.json
+++ b/frontend/src/i18n/locales/ru.json
@@ -1,6 +1,6 @@
 {
   "habits": {
-    "title": "Привычки",
+    "title": "Название привычки",
     "add": "Добавить привычку",
     "delete": "Удалить",
     "edit": "Редактировать",
