--- a/frontend/src/i18n/locales/ru.json
+++ b/frontend/src/i18n/locales/ru.json
@@ -1,6 +1,7 @@
 {
   "habits": {
     "title": "Название привычки",
+    "want_to_become": "Хочу стать",
     "add": "Добавить привычку",
     "delete": "Удалить",
     "edit": "Редактировать",
