--- a/frontend/src/i18n/locales/ru.json
+++ b/frontend/src/i18n/locales/ru.json
@@ -15,6 +15,12 @@
       "update": "Ошибка при обновлении привычки",
       "undo": "Ошибка при отмене привычки",
       "user_create": "Ошибка при создании пользователя"
+    },
+    "modals": {
+      "delete_title": "Удаление привычки",
+      "delete_message": "Вы уверены, что хотите удалить эту привычку?",
+      "delete_confirm": "Да, удалить",
+      "delete_cancel": "Нет, оставить"
     }
   },
   "days": {
