Add sharing habit

--- a/frontend/src/i18n/locales/en.json
+++ b/frontend/src/i18n/locales/en.json
@@ -4,6 +4,7 @@
     "want_to_become": "I want to become",
     "add": "Add habit",
     "delete": "Delete",
+    "share": "Share",
     "edit": "Edit",
     "save": "Save",
     "cancel": "Cancel",
