--- a/frontend/src/i18n/locales/ru.json
+++ b/frontend/src/i18n/locales/ru.json
@@ -4,6 +4,7 @@
     "want_to_become": "Хочу стать",
     "add": "Добавить привычку",
     "delete": "Удалить",
+    "share": "Поделиться",
     "edit": "Редактировать",
     "save": "Сохранить",
     "cancel": "Отмена",
@@ -14,7 +15,9 @@
       "create": "Не удалось создать привычку. Попробуйте еще раз.",
       "update": "Ошибка при обновлении привычки",
       "undo": "Ошибка при отмене привычки",
-      "user_create": "Ошибка при создании пользователя"
+      "user_create": "Ошибка при создании пользователя",
+      "delete": "Ошибка при удалении привычки",
+      "delete_forbidden": "Только создатель может удалить привычку"
     },
     "modals": {
       "delete_title": "Удаление привычки",
