--- a/frontend/src/i18n/locales/ru.json
+++ b/frontend/src/i18n/locales/ru.json
@@ -11,6 +11,11 @@
     "compact_view": "Компактный вид",
     "one_time": "Одноразовое дело",
     "every_day": "Выполнять каждый день",
+    "create_new": "Создать новую",
+    "link": {
+      "title": "Выберите привычку",
+      "description": "Выберите одну из ваших привычек, чтобы связать её с привычкой, которой с вами поделились"
+    },
     "errors": {
       "create": "Не удалось создать привычку. Попробуйте еще раз.",
       "update": "Ошибка при обновлении привычки",
