Beautifull sharing msg

--- a/frontend/src/i18n/locales/en.json
+++ b/frontend/src/i18n/locales/en.json
@@ -12,7 +12,11 @@
     "one_time": "One time task",
     "every_day": "Do every day",
     "create_new": "Create new",
-    "join_habit": "🤝 Join habit: ",
+    "join_habit": {
+      "0": "I'm doing habit",
+      "1": "already",
+      "2": "days, join me! 🤝"
+    },
     "link": {
       "title": "Select a habit",
       "description": "Select one of your habits to link it to the habit you were shared with"
