--- a/frontend/src/i18n/locales/ru.json
+++ b/frontend/src/i18n/locales/ru.json
@@ -12,7 +12,11 @@
     "one_time": "Одноразовое дело",
     "every_day": "Выполнять каждый день",
     "create_new": "Создать новую",
-    "join_habit": "🤝 Присоединяйся к привычке: ",
+    "join_habit": {
+      "0": "Я выполняю привычку",
+      "1": "уже",
+      "2": "дней, присоединяйся! 🤝"
+    },
     "link": {
       "title": "Выберите привычку",
       "description": "Выберите одну из ваших привычек, чтобы связать её с привычкой, которой с вами поделились"
