--- a/frontend/src/i18n/locales/ru.json
+++ b/frontend/src/i18n/locales/ru.json
@@ -23,11 +23,13 @@
     },
     "errors": {
       "create": "Не удалось создать привычку. Попробуйте еще раз.",
-      "update": "Ошибка при обновлении привычки",
+      "update": "Не удалось обновить привычку",
       "undo": "Ошибка при отмене привычки",
       "user_create": "Ошибка при создании пользователя",
       "delete": "Ошибка при удалении привычки",
-      "delete_forbidden": "Только создатель может удалить привычку"
+      "delete_forbidden": "Только создатель может удалить привычку",
+      "edit_forbidden": "Только создатель может изменять привычку",
+      "title_required": "Введите название привычки"
     },
     "modals": {
       "delete_title": "Удаление привычки",
