--- a/frontend/src/i18n/locales/en.json
+++ b/frontend/src/i18n/locales/en.json
@@ -25,7 +25,11 @@
       "create": "Failed to create habit. Please try again.",
       "update": "Error updating habit",
       "undo": "Error undoing habit",
-      "user_create": "Error creating user"
+      "user_create": "Error creating user",
+      "delete": "Error deleting habit",
+      "delete_forbidden": "Only the creator can delete the habit",
+      "edit_forbidden": "Only the creator can edit the habit",
+      "title_required": "Enter the habit name"
     },
     "modals": {
       "delete_title": "Delete Habit",
