--- a/frontend/src/i18n/locales/ru.json
+++ b/frontend/src/i18n/locales/ru.json
@@ -19,7 +19,7 @@
     },
     "link": {
       "title": "Выберите привычку",
-      "description": "Выберите одну из ваших привычек, чтобы связать её с привычкой, которой с вами поделились"
+      "description": "Выберите одну из ваших привычек, чтобы связать её с привычкой, которой с вами поделились. Или создайте новую привычку"
     },
     "errors": {
       "create": "Не удалось создать привычку. Попробуйте еще раз.",
@@ -56,6 +56,23 @@
     "notification_time_placeholder": "Выберите время",
     "save": "Сохранить",
     "saved": "Сохранено",
-    "error": "Ошибка при сохранении настроек"
+    "error": "Ошибка сохранения настроек"
+  },
+  "onboarding": {
+    "welcome": {
+      "title": "Добро пожаловать в Habitry!",
+      "description": "Мы поможем вам создавать и поддерживать полезные привычки вместе с друзьями"
+    },
+    "social": {
+      "title": "Делитесь привычками",
+      "description": "Отслеживайте прогресс друг друга и мотивируйте на достижение целей"
+    },
+    "start": {
+      "title": "Начнем!",
+      "description": "Создайте свою первую привычку и пригласите друзей присоединиться к вам",
+      "action": "Создать привычку"
+    },
+    "skip": "Пропустить",
+    "next": "Далее"
   }
 } 
