--- a/frontend/src/i18n/locales/ru.json
+++ b/frontend/src/i18n/locales/ru.json
@@ -64,8 +64,12 @@
       "description": "Мы поможем вам создавать и поддерживать полезные привычки вместе с друзьями"
     },
     "social": {
-      "title": "Делитесь привычками",
-      "description": "Отслеживайте прогресс друг друга и мотивируйте на достижение целей"
+      "title": "Взаимная поддержка",
+      "description": "Поделитесь своей привычкой с друзьями по ссылке. Когда друг свяжет вашу привычку со своей, он будет видеть ваш прогресс. Чтобы видеть его прогресс, вам тоже нужно связать его привычку со своей"
+    },
+    "interaction": {
+      "title": "Как отметить привычку",
+      "description": "Чтобы отметить привычку выполненной, нажмите и удерживайте её карточку"
     },
     "start": {
       "title": "Начнем!",
