--- a/frontend/src/i18n/locales/ru.json
+++ b/frontend/src/i18n/locales/ru.json
@@ -12,6 +12,11 @@
     "one_time": "Одноразовое дело",
     "every_day": "Выполнять каждый день",
     "create_new": "Создать новую",
+    "followers_list": "Список подписчиков",
+    "no_followers": "У этой привычки пока нет подписчиков",
+    "unfollow": "Отписаться",
+    "confirm_unfollow": "Подтверждение отписки",
+    "unfollow_user": "Вы уверены, что хотите отписаться от пользователя @{username}?",
     "join_habit": {
       "0": "Я выполняю привычку",
       "1": "уже",
@@ -29,7 +34,9 @@
       "delete": "Ошибка при удалении привычки",
       "delete_forbidden": "Только создатель может удалить привычку",
       "edit_forbidden": "Только создатель может изменять привычку",
-      "title_required": "Введите название привычки"
+      "title_required": "Введите название привычки",
+      "load_followers": "Не удалось загрузить список подписчиков",
+      "unfollow": "Не удалось отписаться от пользователя"
     },
     "modals": {
       "delete_title": "Удаление привычки",
@@ -48,6 +55,11 @@
     "sunday": "Вс"
   },
   "premium": "Премиум",
+  "common": {
+    "cancel": "Отмена",
+    "confirm": "Подтвердить",
+    "loading": "Загрузка..."
+  },
   "settings": {
     "title": "Настройки",
     "notifications": "Уведомления",
