--- a/frontend/src/i18n/locales/ru.json
+++ b/frontend/src/i18n/locales/ru.json
@@ -17,6 +17,8 @@
     "unfollow": "Отписаться",
     "confirm_unfollow": "Подтверждение отписки",
     "unfollow_user": "Вы уверены, что хотите отписаться от пользователя @{username}?",
+    "unfollow_success": "Вы успешно отписались от пользователя",
+    "link_success": "Вы успешно связали привычку",
     "join_habit": {
       "0": "Я выполняю привычку",
       "1": "уже",
