Add statistics for habit

--- a/frontend/src/i18n/locales/ru.json
+++ b/frontend/src/i18n/locales/ru.json
@@ -19,6 +19,7 @@
     "unfollow_user": "Вы уверены, что хотите отписаться от пользователя @{username}?",
     "unfollow_success": "Вы успешно отписались от пользователя",
     "link_success": "Вы успешно связали привычку",
+    "activity": "Активность",
     "join_habit": {
       "0": "Я выполняю привычку",
       "1": "уже",
@@ -55,6 +56,20 @@
     "friday": "Пт",
     "saturday": "Сб",
     "sunday": "Вс"
+  },
+  "months": {
+    "jan": "Янв",
+    "feb": "Фев",
+    "mar": "Мар",
+    "apr": "Апр",
+    "may": "Май",
+    "jun": "Июн",
+    "jul": "Июл",
+    "aug": "Авг",
+    "sep": "Сен",
+    "oct": "Окт",
+    "nov": "Ноя",
+    "dec": "Дек"
   },
   "premium": "Премиум",
   "common": {
