--- a/frontend/src/i18n/locales/en.json
+++ b/frontend/src/i18n/locales/en.json
@@ -19,6 +19,7 @@
     "unfollow_user": "Are you sure you want to unfollow @{username}?",
     "unfollow_success": "You have successfully unfollowed the user",
     "link_success": "You have successfully linked the habit",
+    "activity": "Activity",
     "join_habit": {
       "0": "I'm doing habit",
       "1": "already",
