Add auto habits

--- a/frontend/src/i18n/locales/en.json
+++ b/frontend/src/i18n/locales/en.json
@@ -1,15 +1,25 @@
 {
   "habits": {
-    "title": "Habit name",
+    "title": "Habits",
+    "create": "Create habit",
+    "edit": "Edit habit",
+    "delete": "Delete habit",
+    "name": "Habit name",
     "want_to_become": "I want to become",
-    "add": "Add habit",
-    "delete": "Delete",
-    "share": "Share",
-    "edit": "Edit",
+    "want_to_become_placeholder": "Example: Athletic",
+    "one_time": "One time habit",
+    "auto_habit": "Auto habit",
+    "days": "Days of week",
+    "monday": "Monday",
+    "tuesday": "Tuesday",
+    "wednesday": "Wednesday",
+    "thursday": "Thursday",
+    "friday": "Friday",
+    "saturday": "Saturday",
+    "sunday": "Sunday",
     "save": "Save",
     "cancel": "Cancel",
     "compact_view": "Compact view",
-    "one_time": "One time task",
     "every_day": "Do every day",
     "create_new": "Create new",
     "followers_list": "Followers",
