--- a/frontend/src/i18n/locales/ru.json
+++ b/frontend/src/i18n/locales/ru.json
@@ -1,15 +1,44 @@
 {
   "habits": {
-    "title": "Название привычки",
-    "want_to_become": "Хочу стать",
-    "add": "Добавить привычку",
-    "delete": "Удалить",
-    "share": "Поделиться",
-    "edit": "Редактировать",
+    "title": "Привычки",
+    "create": "Создать привычку",
+    "edit": "Редактировать привычку",
+    "delete": "Удалить привычку",
+    "name": "Название привычки",
+    "want_to_become": "Кем хочу стать",
+    "want_to_become_placeholder": "Например: Спортивным",
+    "one_time": "Одноразовая привычка",
+    "auto_habit": "Автопривычка",
+    "days": "Дни недели",
+    "monday": "Понедельник",
+    "tuesday": "Вторник",
+    "wednesday": "Среда",
+    "thursday": "Четверг",
+    "friday": "Пятница",
+    "saturday": "Суббота",
+    "sunday": "Воскресенье",
     "save": "Сохранить",
     "cancel": "Отмена",
+    "delete_confirm": "Вы уверены, что хотите удалить привычку?",
+    "delete_success": "Привычка успешно удалена",
+    "create_success": "Привычка успешно создана",
+    "edit_success": "Привычка успешно отредактирована",
+    "error": "Произошла ошибка",
+    "no_habits": "У вас пока нет привычек",
+    "streak": "Серия",
+    "score": "Очки",
+    "days_short": {
+      "mon": "Пн",
+      "tue": "Вт",
+      "wed": "Ср",
+      "thu": "Чт",
+      "fri": "Пт",
+      "sat": "Сб",
+      "sun": "Вс"
+    },
+    "add": "Добавить привычку",
+    "share": "Поделиться",
     "compact_view": "Компактный вид",
-    "one_time": "Одноразовое дело",
     "every_day": "Выполнять каждый день",
     "create_new": "Создать новую",
     "followers_list": "Список подписчиков",
