Add middleware and telegram data check

--- a/frontend/src/i18n/locales/en.json
+++ b/frontend/src/i18n/locales/en.json
@@ -19,10 +19,29 @@
     "sunday": "Sunday",
     "save": "Save",
     "cancel": "Cancel",
+    "delete_confirm": "Are you sure you want to delete the habit?",
+    "delete_success": "Habit successfully deleted",
+    "create_success": "Habit successfully created",
+    "edit_success": "Habit successfully edited",
+    "error": "An error occurred",
+    "no_habits": "You don't have any habits yet",
+    "streak": "Streak",
+    "score": "Score",
+    "days_short": {
+      "mon": "Mon",
+      "tue": "Tue",
+      "wed": "Wed",
+      "thu": "Thu",
+      "fri": "Fri",
+      "sat": "Sat",
+      "sun": "Sun"
+    },
+    "add": "Add habit",
+    "share": "Share",
     "compact_view": "Compact view",
     "every_day": "Do every day",
     "create_new": "Create new",
-    "followers_list": "Followers",
+    "followers_list": "Followers list",
     "no_followers": "This habit has no followers yet",
     "unfollow": "Unfollow",
     "confirm_unfollow": "Confirm Unfollow",
@@ -66,6 +85,20 @@
     "friday": "Fri",
     "saturday": "Sat",
     "sunday": "Sun"
+  },
+  "months": {
+    "jan": "Jan",
+    "feb": "Feb",
+    "mar": "Mar",
+    "apr": "Apr",
+    "may": "May",
+    "jun": "Jun",
+    "jul": "Jul",
+    "aug": "Aug",
+    "sep": "Sep",
+    "oct": "Oct",
+    "nov": "Nov",
+    "dec": "Dec"
   },
   "premium": "Premium",
   "common": {
