Add payment and count_manager

--- a/frontend/src/i18n/locales/en.json
+++ b/frontend/src/i18n/locales/en.json
@@ -1,13 +1,15 @@
 {
   "habits": {
     "title": "Habits",
-    "create": "Create habit",
-    "edit": "Edit habit",
-    "delete": "Delete habit",
-    "name": "Habit name",
-    "want_to_become": "I want to become",
+    "create": "Create Habit",
+    "edit": "Edit Habit",
+    "delete": "Delete Habit",
+    "name": "Habit Name",
+    "want_to_become": "Who I Want to Become",
     "want_to_become_placeholder": "Example: Athletic",
-    "one_time": "One time habit",
+    "stake": "Stake",
+    "stake_placeholder": "Enter stake amount",
+    "one_time": "One Time Habit",
     "auto_habit": "Auto habit",
     "days": "Days of week",
     "monday": "Monday",
