Удаление поля IsAuto из ответов на запросы о привычках и добавление всплывающих подсказок для полей ввода в модальном окне создания привычки.

--- a/frontend/src/i18n/locales/en.json
+++ b/frontend/src/i18n/locales/en.json
@@ -1,16 +1,21 @@
 {
   "habits": {
-    "title": "Habits",
+    "title": "Name",
+    "title_placeholder": "Example: Meditation",
     "create": "Create Habit",
     "edit": "Edit Habit",
     "delete": "Delete Habit",
     "name": "Habit Name",
+    "habits_list": "Habits",
     "want_to_become": "Who I Want to Become",
     "want_to_become_placeholder": "Example: Athletic",
+    "want_to_become_tooltip": "In this field, you can specify who you want to become thanks to this habit. This field is optional, but it is very useful for motivation",
     "stake": "Stake",
     "stake_placeholder": "Enter stake amount",
+    "stake_tooltip": "The bet is the amount you will lose if you don't follow the habit. It will be distributed among friends in proportion to their bets.",
     "one_time": "One Time Habit",
     "auto_habit": "Auto habit",
+    "auto_habit_tooltip": "The auto habit is automatically marked as completed on the selected days of the week",
     "days": "Days of week",
     "monday": "Monday",
     "tuesday": "Tuesday",
