--- a/frontend/src/i18n/locales/ru.json
+++ b/frontend/src/i18n/locales/ru.json
@@ -1,16 +1,21 @@
 {
   "habits": {
-    "title": "Привычки",
+    "title": "Название",
+    "title_placeholder": "Например: Медитация",
     "create": "Создать привычку",
     "edit": "Редактировать привычку",
     "delete": "Удалить привычку",
     "name": "Название привычки",
+    "habits_list": "Привычки",
     "want_to_become": "Кем хочу стать",
     "want_to_become_placeholder": "Например: Спортивным",
+    "want_to_become_tooltip": "В этом поле вы можете указать, кем вы хотите стать благодаря этой привычке. Это поле не обязательное, но очень полезное для мотивации",
     "stake": "Ставка",
     "stake_placeholder": "Введите сумму ставки",
+    "stake_tooltip": "Ставка — сумма, которую вы потеряете при невыполнении привычки. Она распределится между друзьями пропорционально их ставкам",
     "one_time": "Одноразовая привычка",
     "auto_habit": "Автопривычка",
+    "auto_habit_tooltip": "Автопривычка автоматически отмечается как выполненная в выбранные дни недели",
     "days": "Дни недели",
     "monday": "Понедельник",
     "tuesday": "Вторник",
