--- a/frontend/src/i18n/locales/ru.json
+++ b/frontend/src/i18n/locales/ru.json
@@ -56,6 +56,17 @@
     "unfollow_success": "Вы успешно отписались от пользователя",
     "link_success": "Вы успешно связали привычку",
     "activity": "Активность",
+    "mutual_follow": "Взаимная подписка",
+    "one_way_follow": "Односторонняя подписка",
+    "ping_follower": "Отправить напоминание",
+    "completed_today": "Выполнено сегодня",
+    "not_completed_today": "Не выполнено сегодня",
+    "ping_success": "Напоминание отправлено @{username}",
+    "ping_message": "Напоминаю о необходимости выполнить привычку! 🔔",
+    "ping_sent_title": "Напоминание отправлено",
+    "ping_sent_message": "Напоминание отправлено пользователю @{username}. Скоро он получит уведомление.",
+    "confirm_ping": "Отправить напоминание",
+    "confirm_ping_text": "Вы хотите отправить напоминание пользователю @{username}?",
     "join_habit": {
       "0": "Я выполняю привычку",
       "1": "уже",
@@ -75,7 +86,8 @@
       "edit_forbidden": "Только создатель может изменять привычку",
       "title_required": "Введите название привычки",
       "load_followers": "Не удалось загрузить список подписчиков",
-      "unfollow": "Не удалось отписаться от пользователя"
+      "unfollow": "Не удалось отписаться от пользователя",
+      "ping": "Не удалось отправить напоминание"
     },
     "modals": {
       "delete_title": "Удаление привычки",
