--- a/frontend/src/i18n/locales/ru.json
+++ b/frontend/src/i18n/locales/ru.json
@@ -67,6 +67,12 @@
     "ping_sent_message": "Напоминание отправлено пользователю @{username}. Скоро он получит уведомление.",
     "confirm_ping": "Отправить напоминание",
     "confirm_ping_text": "Вы хотите отправить напоминание пользователю @{username}?",
+    "ping_all_inactive": "Напомнить всем",
+    "no_followers_to_ping": "Нет подписчиков, которым можно отправить напоминание",
+    "ping_all_success": "Напоминания отправлены {count} подписчикам",
+    "ping_all_sent_title": "Напоминания отправлены",
+    "ping_all_sent_message": "Напоминания отправлены {count} подписчикам",
+    "complete_before_ping": "Сначала выполните привычку, чтобы отправить напоминание",
     "join_habit": {
       "0": "Я выполняю привычку",
       "1": "уже",
@@ -94,7 +100,8 @@
       "delete_message": "Вы уверены, что хотите удалить эту привычку?",
       "delete_confirm": "Да, удалить",
       "delete_cancel": "Нет, оставить"
-    }
+    },
+    "ping_blocked_title": "Напоминание заблокировано"
   },
   "days": {
     "monday": "Пн",
