Оптимизация стилей и логики компонентов: замена статических значений цветов на CSS-переменные, улучшение интерфейса в модальных окнах, добавление новых подсказок и обновление локализации для текстов. Устранение неиспользуемых стилей и упрощение кода в компонентах BuyTokensModal, HabitActionsModal, HabitFollowersModal, NewHabitModal и SettingsPage.

--- a/frontend/src/i18n/locales/en.json
+++ b/frontend/src/i18n/locales/en.json
@@ -17,6 +17,7 @@
     "auto_habit": "Auto habit",
     "auto_habit_tooltip": "The auto habit is automatically marked as completed on the selected days of the week",
     "days": "Days of week",
+    "days_tooltip": "Select the days of the week when you plan to practice this habit. You can select individual days or click 'All' to select all days of the week.",
     "monday": "Monday",
     "tuesday": "Tuesday",
     "wednesday": "Wednesday",
@@ -182,7 +183,7 @@
     "processing": "Processing...",
     "success_title": "Success!",
     "success_message": "Transaction completed successfully! Tokens will be added to your balance soon.",
-    "will_receive": "You will receive: {amount} WILL",
+    "will_receive": "You will receive",
     "balance": "Your balance: {amount} WILL",
     "tokens_to_withdraw": "Tokens to withdraw",
     "wallet_address": "Wallet address",
