--- a/frontend/src/i18n/locales/ru.json
+++ b/frontend/src/i18n/locales/ru.json
@@ -17,6 +17,7 @@
     "auto_habit": "Автопривычка",
     "auto_habit_tooltip": "Автопривычка автоматически отмечается как выполненная в выбранные дни недели",
     "days": "Дни недели",
+    "days_tooltip": "Выберите дни недели, в которые вы планируете выполнять эту привычку. Вы можете выбрать отдельные дни или нажать 'Все' для выбора всех дней недели.",
     "monday": "Понедельник",
     "tuesday": "Вторник",
     "wednesday": "Среда",
@@ -182,7 +183,7 @@
     "processing": "Обработка...",
     "success_title": "Успешно!",
     "success_message": "Транзакция успешно выполнена! Токены будут добавлены на ваш баланс в ближайшее время.",
-    "will_receive": "Вы получите: {amount} WILL",
+    "will_receive": "Вы получите",
     "balance": "Ваш баланс: {amount} WILL",
     "tokens_to_withdraw": "Токены для вывода",
     "wallet_address": "Адрес кошелька",
